@@ -9,33 +9,16 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-
-import static com.stormx.hicoder.common.Permission.ADMIN_CREATE;
-import static com.stormx.hicoder.common.Permission.ADMIN_DELETE;
-import static com.stormx.hicoder.common.Permission.ADMIN_READ;
-import static com.stormx.hicoder.common.Permission.ADMIN_UPDATE;
-
 @Getter
 @RequiredArgsConstructor
 public enum Role {
 
-    USER(Collections.emptySet()),
-    ADMIN(
-            Set.of(
-                    ADMIN_READ,
-                    ADMIN_UPDATE,
-                    ADMIN_DELETE,
-                    ADMIN_CREATE
-            )
-    );
+    USER(Collections.emptySet()), ADMIN(Collections.emptySet());
 
     private final Set<Permission> permissions;
 
     public List<SimpleGrantedAuthority> getAuthorities() {
-        var authorities = getPermissions()
-                .stream()
-                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-                .collect(Collectors.toList());
+        var authorities = getPermissions().stream().map(permission -> new SimpleGrantedAuthority(permission.getPermission())).collect(Collectors.toList());
         authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
         return authorities;
     }
